--- a/public/frontend/css/slider.css
+++ b/public/frontend/css/slider.css
@@ -1,5 +1,4 @@
 
-
 /*Slider*/
 .slider-relative {
 	position:relative;
@@ -66,6 +65,7 @@ position: absolute;
 left: 50%;
 margin-left: -51px;
 z-index: 999;
+bottom: -20px;
 }
 
 .pagination li {
@@ -78,6 +78,7 @@ z-index: 999;
 
 
 .pagination  li a{
+	border: none;
 	width: 24px;
 	display: block;
 		transition: 0s ease;
